--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": true,
         "strictNullChecks": true,
         "target": "es5",
-        "module": "amd",
+        "module": "commonjs",
         "declaration": true,
         "outDir": "./build",
     },
