--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "projet",
+  "name": "my-lib",
   "version": "1.0.0",
   "description": "Tuto Typescript",
-  "main": "index.js",
+  "main": "build/script/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/requirejs": "^2.1.31",
-    "moment": "^2.24.0",
-    "requirejs": "^2.3.6"
+    "moment": "^2.24.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.5",
+    "protractor": "^5.4.2",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   }
 }
