--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
         "module": "commonjs",
         "declaration": true,
         "outDir": "./build",
+        "lib": ["es2015", "dom"],
+        "types": [
+            
+        ]
     },
     "exclude" : [
         "./build",
